[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/2D/HandZone.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UI/UI.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/UICardHand.gd" type="Script" id=3]
[ext_resource path="res://Scenes/UI/UICardDashboard.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 220 )

[node name="UI" type="Node2D"]
script = ExtResource( 2 )

[node name="UICardDashboard" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="UICardHand" type="Node2D" parent="UICardDashboard"]
script = ExtResource( 3 )

[node name="HandZone" type="Sprite" parent="UICardDashboard/UICardHand"]
position = Vector2( 512, 590 )
texture = ExtResource( 1 )

[node name="PlayZone" type="Area2D" parent="UICardDashboard/UICardHand"]
collision_layer = 2
collision_mask = 0
__meta__ = {
"_editor_description_": "The area that players must drag a card to to play it"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="UICardDashboard/UICardHand/PlayZone"]
position = Vector2( 512, 220 )
shape = SubResource( 1 )

[connection signal="card_looking_for_target" from="UICardDashboard" to="." method="_on_UICardDashboard_card_looking_for_target"]
[connection signal="card_not_looking_for_target" from="UICardDashboard" to="." method="_on_UICardDashboard_card_not_looking_for_target"]
[connection signal="mouse_entered" from="UICardDashboard/UICardHand/PlayZone" to="UICardDashboard" method="_on_PlayZone_mouse_entered"]
[connection signal="mouse_exited" from="UICardDashboard/UICardHand/PlayZone" to="UICardDashboard" method="_on_PlayZone_mouse_exited"]
