[gd_scene load_steps=6 format=3 uid="uid://cbgwjkw8ydunf"]

[ext_resource type="Script" path="res://Scenes/UI/UICardHand.gd" id="1"]
[ext_resource type="Script" path="res://Scenes/UI/UICardDashboard.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://b2jdjsqlnrx7l" path="res://Assets/2D/HandZone.png" id="3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(1024, 440)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(1024, 500)

[node name="UICardDashboard" type="Node2D"]
script = ExtResource("2")

[node name="UICardHand" type="Node2D" parent="."]
script = ExtResource("1")

[node name="HandZone" type="Sprite2D" parent="UICardHand"]
position = Vector2(512, 590)
texture = ExtResource("3")

[node name="PlayZone" type="Area2D" parent="UICardHand"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="UICardHand/PlayZone"]
position = Vector2(512, 220)
shape = SubResource("1")

[node name="RetainZone" type="Area2D" parent="UICardHand"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="UICardHand/RetainZone"]
position = Vector2(512, 250)
shape = SubResource("2")

[connection signal="mouse_entered" from="UICardHand/PlayZone" to="." method="_on_PlayZone_mouse_entered"]
[connection signal="mouse_exited" from="UICardHand/RetainZone" to="." method="_on_RetainZone_mouse_exited"]
